--- a/markup/index.html
+++ b/markup/index.html
@@ -13,7 +13,7 @@
 			<div class="row">
 				<div class="col-sm-5 col-sm-offset-1">
 					<div class="logo">
-						<a href="#"><img src="images/logo.png" alt="Ингосстрах" class="img-responsive"></a>
+						<a href="#link"><img src="images/logo.png" alt="Ингосстрах" class="img-responsive"></a>
 					</div>
 					<div class="title">
 						<h1>Подарок для Вас в наш День Рождения</h1>
@@ -47,9 +47,9 @@
 							<p>Мы стали еще ближе к Вам: открыли более 80 новых офисов, чтобы оперативно реагировать на каждый страховой случай!</p>
 							<p>Мы продолжаем совершенствовать онлайн-сервис:</p>
 							<ul class="list">
-								<li><i class="icon-support"></i>Теперь в <a href="#">личном кабинете</a> открыты новые возможности. Приглашаем зарегистрироваться, если Вы еще этого не сделали!</li>
-								<li><i class="icon-car"></i>Отличная новость для автовладельцев – <a href="">калькулятор КАСКО</a> стал настолько удобным, что рассчитать стоимость можно за одну минуту, а клиенты из Москвы и области могут оплатить полис онлайн.</li>
-								<li><i class="icon-home"></i>На сайте за пару минут можно оформить популярный <a href="">полис «Страхование отмены поездки»</a>, а хит сезона – «Страхование дачи» оформляется теперь за пару кликов.</li>
+								<li><i class="icon-support"></i>Теперь в <a href="#link">личном кабинете</a> открыты новые возможности. Приглашаем зарегистрироваться, если Вы еще этого не сделали!</li>
+								<li><i class="icon-car"></i>Отличная новость для автовладельцев – <a href="#link">калькулятор КАСКО</a> стал настолько удобным, что рассчитать стоимость можно за одну минуту, а клиенты из Москвы и области могут оплатить полис онлайн.</li>
+								<li><i class="icon-home"></i>На сайте за пару минут можно оформить популярный <a href="#link">полис «Страхование отмены поездки»</a>, а хит сезона – «Страхование дачи» оформляется теперь за пару кликов.</li>
 							</ul>
 						</div>
 						<p>В свой День Рождения мы приготовили для Вас подарок!</p>
@@ -99,16 +99,16 @@
 				<div class="col-sm-6 col-md-4 footer-block">
 					<div class="short-links">
 						<h3 class="h6">Заходите на наш сайт</h3>
-						<a href=""><i class="icon-web"></i><span>www.ingos.ru</span></a>
+						<a href="#link"><i class="icon-web"></i><span>www.ingos.ru</span></a>
 					</div>
 					<div class="short-links">
 						<h3 class="h6">Мы в соц сетях</h3>
 						<ul class="social-links">
-							<li><a href="" title="facebook"><i class="icon-facebook"></i></a></li>
-							<li><a href="" title="vk"><i class="icon-vk"></i></a></li>
-							<li><a href="" title="twitter"><i class="icon-twitter"></i></a></li>
-							<li><a href="" title="ok"><i class="icon-ok"></i></a></li>
-							<li><a href="" title="youtube"><i class="icon-youtube"></i></a></li>
+							<li><a href="#link" title="facebook"><i class="icon-facebook"></i></a></li>
+							<li><a href="#link" title="vk"><i class="icon-vk"></i></a></li>
+							<li><a href="#link" title="twitter"><i class="icon-twitter"></i></a></li>
+							<li><a href="#link" title="ok"><i class="icon-ok"></i></a></li>
+							<li><a href="#link" title="youtube"><i class="icon-youtube"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -116,11 +116,11 @@
 					<div class="footer-links">
 						<h3 class="h6">Виды страхования</h3>
 						<ul class="footer-links__list">
-							<li><a href="">КАСКО</a></li>
-							<li><a href="">ДМС</a></li>
-							<li><a href="">Страхование туристов</a></li>
-							<li><a href="">Страхование имущества</a></li>
-							<li><a href="">Страхование жизни</a></li>
+							<li><a href="#link">КАСКО</a></li>
+							<li><a href="#link">ДМС</a></li>
+							<li><a href="#link">Страхование туристов</a></li>
+							<li><a href="#link">Страхование имущества</a></li>
+							<li><a href="#link">Страхование жизни</a></li>
 						</ul>
 					</div>
 				</div>
@@ -130,23 +130,23 @@
 						<div class="app__row">
 							<span class="app__title">IngoMobile</span>
 							<ul class="app__list">
-								<li><a href=""><i class="icon-apple"></i></a></li>
-								<li><a href=""><i class="icon-android"></i></a></li>
-								<li><a href=""><i class="icon-windows"></i></a></li>
+								<li><a href="#link"><i class="icon-apple"></i></a></li>
+								<li><a href="#link"><i class="icon-android"></i></a></li>
+								<li><a href="#link"><i class="icon-windows"></i></a></li>
 							</ul>
 						</div>
 						<div class="app__row">
 							<span class="app__title">IngoTravel</span>
 							<ul class="app__list">
-								<li><a href=""><i class="icon-apple"></i></a></li>
-								<li><a href=""><i class="icon-android"></i></a></li>
+								<li><a href="#link"><i class="icon-apple"></i></a></li>
+								<li><a href="#link"><i class="icon-android"></i></a></li>
 							</ul>
 						</div>
 						<div class="app__row">
 							<span class="app__title">IngoReport</span>
 							<ul class="app__list">
-								<li><a href=""><i class="icon-apple"></i></a></li>
-								<li><a href=""><i class="icon-android"></i></a></li>
+								<li><a href="#link"><i class="icon-apple"></i></a></li>
+								<li><a href="#link"><i class="icon-android"></i></a></li>
 							</ul>
 						</div>
 					</div>
@@ -178,16 +178,16 @@
 						</div>
 						<div class="form-group term-checkbox">
 							<input type="checkbox" id="term"/>
-							<label for="term">согласен с <a href="">условиями</a> получения подарка</label>
+							<label for="term">согласен с <a href="#link">условиями</a> получения подарка</label>
 						</div>
 					</form>
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-block btn-primary">Получить подарок</button>
 				</div>
-			</div><!-- /.modal-content -->
-		</div><!-- /.modal-dialog -->
-	</div><!-- /.modal -->
+			</div>
+		</div>
+	</div>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" defer></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" defer integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
