--- a/markup/index.html
+++ b/markup/index.html
@@ -11,7 +11,7 @@
 	<header class="header">
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-5 col-sm-offset-1">
+				<div class="col-sm-6 col-lg-5 col-lg-offset-1">
 					<div class="logo">
 						<a href="#link"><img src="images/logo.png" alt="Ингосстрах" class="img-responsive"></a>
 					</div>
@@ -25,7 +25,7 @@
 						</button>
 					</div>
 				</div>
-				<div class="col-sm-5 hidden-xs">
+				<div class="col-sm-6 col-lg-5">
 					<div class="img-holder text-right">
 						<img src="images/photo-img.png" class="img-responsive" alt="img-description">
 					</div>
@@ -49,7 +49,7 @@
 							<ul class="list">
 								<li><i class="icon-support"></i>Теперь в <a href="#link">личном кабинете</a> открыты новые возможности. Приглашаем зарегистрироваться, если Вы еще этого не сделали!</li>
 								<li><i class="icon-car"></i>Отличная новость для автовладельцев – <a href="#link">калькулятор КАСКО</a> стал настолько удобным, что рассчитать стоимость можно за одну минуту, а клиенты из Москвы и области могут оплатить полис онлайн.</li>
-								<li><i class="icon-home"></i>На сайте за пару минут можно оформить популярный <a href="#link">полис «Страхование отмены поездки»</a>, а хит сезона – «Страхование дачи» оформляется теперь за пару кликов.</li>
+								<li><i class="icon-home"></i>На сайте за пару минут можно оформить популярный полис <a href="#link">«Страхование отмены поездки»</a>, а хит сезона – <a href="#link">«Страхование дачи»</a> оформляется теперь за пару кликов.</li>
 							</ul>
 						</div>
 						<p>В свой День Рождения мы приготовили для Вас подарок!</p>
@@ -75,12 +75,12 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 col-md-push-7">
+				<div class="col-sm-5 col-sm-push-7 col-md-4 col-md-push-7">
 					<div class="cta__image">
 						<img class="img-responsive" src="images/img01.jpg" alt=""/>
 					</div>
 				</div>
-				<div class="col-md-6 col-md-offset-1 col-md-pull-4 cta__text">
+				<div class="col-sm-7 col-sm-pull-5 col-md-6 col-md-offset-1 col-md-pull-4 cta__text">
 					<strong class="cta__title">5 аудиокниг на Литрес на выбор</strong>
 					<p>Любимые произведения в дороге, на отдыхе и за рулем!<br/>
 						Выберите 5 понравившихся книг на Литрес и скачайте их бесплатно! <br/>
@@ -96,7 +96,7 @@
 	<footer class="footer">
 		<div class="container">
 			<div class="row footer__top">
-				<div class="col-sm-6 col-md-4 footer-block">
+				<div class="col-sm-4 footer-block">
 					<div class="short-links">
 						<h3 class="h6">Заходите на наш сайт</h3>
 						<a href="#link"><i class="icon-web"></i><span>www.ingos.ru</span></a>
@@ -112,7 +112,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-4 footer-block">
+				<div class="col-sm-4 footer-block">
 					<div class="footer-links">
 						<h3 class="h6">Виды страхования</h3>
 						<ul class="footer-links__list">
@@ -124,7 +124,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="col-sm-6 col-md-4 footer-block">
+				<div class="col-sm-4 footer-block">
 					<div class="app">
 						<h3 class="h6">Мобильные приложения</h3>
 						<div class="app__row">
